--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
     "@prisma/client": "^6.18.0",
     "@tanstack/react-query": "^5.90.5",
     "@web3modal/wagmi": "^5.1.11",
-    "prisma": "^6.18.0",
-    "viem": "^2.38.4",
-    "wagmi": "^2.18.2",
+    "apexcharts": "^5.3.5",
+    "bcryptjs": "^3.0.2",
     "downloadjs": "^1.4.7",
     "framer-motion": "^12.7.4",
     "html-to-image": "^1.11.13",
@@ -28,12 +26,16 @@
     "mysql2": "^3.14.0",
     "next": "15.3.1",
     "nodemailer": "^6.10.1",
+    "prisma": "^6.18.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.8.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
     "ua-parser-js": "^2.0.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "viem": "^2.38.4",
+    "wagmi": "^2.18.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
